objects/NGCC_Pre_Chat_Configuration__c.object
<CustomObject>
    <fields>
        <fullName>CCO_ID__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CCO ID</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Company__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Company</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Country</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>English_Name__c</fullName>
        <label>English_Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <defaultValue>false</defaultValue>
        <label>First Name</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Headling_Logo__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Headling Logo</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Last Name</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Mapping_GVE_Skill__c</fullName>
        <description>Stores Mapping GVE Skill for pre chat routing</description>
        <label>Mapping GVE Skill</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Options__c</fullName>
        <label>Options</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Phone</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PostChat_URL__c</fullName>
        <description>This field will store the Postchat URL for the chat button</description>
        <label>PostChat URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <customSettingsType>List</customSettingsType>
    <label>NGCC Pre Chat Configuration</label>
</CustomObject>